# FastApi

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  seed_db.py  start.md
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 7b5ee9b4496b_.py
api/account_regions/: account_regions.py
api/companies/: companies.py
api/courses/: courses.py
api/crud/: crud.py
api/dispatchers/: dispatchers.py
api/menuItems/: menuitems.py
api/notifications/: notifications.py
api/roles/: roles.py
api/section/: section.py
api/station_summaries/: station_summaries.py
api/stations/: stations.py
api/supply_regions/: supply_regions.py
api/transfers/: transfers.py
api/users/: users.py
api/vehicles/: vehicles.py
db/: db_setup.py
db/model/: account_region.py  company.py  dispatcher.py  menuitem.py  mixins.py  notification.py  profile.py  role.py  station.py  station_summary.py  supply_region.py  transfer.py  user.py  vehicle.py
routes/: auth.py  login.py
